@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 use strict;
-use Test::More tests => 2;
+use Test::More tests => 3;
 use IPC::System::Simple;
 
 # These tests are for testing internal subroutines, and may change
@@ -16,3 +16,15 @@ eval {
 };
 
 like($@,qr{unexpectedly returned exit value},"Failed exit");
+
+SKIP: {
+	skip("Non-Win32 only", 1) if IPC::System::Simple::WINDOWS;
+
+	# _spawn_or_die should croak on non-Windows systems.
+
+	eval {
+		IPC::System::Simple::_spawn_or_die();
+	};
+
+	like($@, qr{Internal error},"_spawn_or_die fails under non-Win32");
+};
